--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
-[package]
+﻿[package]
 name = "push-to-talk"
-version = "0.0.8"
+version = "0.0.9"
 description = "A push-to-talk speech-to-text application"
 authors = ["you"]
 license = ""
