update：删除msi类型打包支持，避免自动更新创建多实例

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -172,7 +172,7 @@ jobs:
             ${{ steps.changelog.outputs.changelog }}
 
             ## 下载安装
-            - **Windows**: 下载 `.msi` 或 `.exe` 安装包
+            - **Windows**: 下载 `.exe` 安装包
             - 安装后需以管理员身份运行
             - 应用内支持自动更新
 
