--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -61,6 +61,9 @@ tauri-plugin-process = "2"
 # 打开外部链接
 tauri-plugin-opener = "2"
 
+# 单实例支持
+tauri-plugin-single-instance = "2"
+
 # Windows Audio Session API - 录音时静音其他应用
 [target.'cfg(windows)'.dependencies]
 windows = { version = "0.58", features = [
